--- a/app/assets/stylesheets/items.css.scss
+++ b/app/assets/stylesheets/items.css.scss
@@ -1,3 +1,17 @@
 // Place all the styles related to the Items controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+$item-width: 280px;
+
+.store-container {
+	width: 960px;
+}
+
+.item {
+	width: $item-width;
+	box-shadow: 0 0 2px 2px black;
+	img {
+		max-height: 300px;
+	}
+}
