--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,31 +1,16 @@
-<h1>Listing items</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Details</th>
-      <th>Price</th>
-      <th></th>
-      <th></th>
-      <th></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @items.each do |item| %>
-      <tr>
-        <td><%= item.title %></td>
-        <td><%= item.details %></td>
-        <td><%= item.price %></td>
-        <td><%= link_to 'Show', item %></td>
-        <td><%= link_to 'Edit', edit_item_path(item) %></td>
-        <td><%= link_to 'Destroy', item, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
+<div class = "container">
+  <h1>Listing items</h1>
+      <div id="masonry-container" class="store-container transitions-enabled infinite-scroll has-gutters">
+        <% @items.each do |item| %>
+          <div class="item box col">
+            <%= image_tag "SimoneAnne-0023.jpg" %>
+            <%= item.title %>
+            <%= item.price %>
+            <%= link_to 'Show', item %>
+            <%= link_to 'Edit', edit_item_path(item) %>
+            <%= link_to 'Destroy', item, method: :delete, data: { confirm: 'Are you sure?' } %>
+          </div>
+        <% end %>
+      </div>
+  </div>
 <%= link_to 'New Item', new_item_path %>
