--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,7 +2,7 @@
 	<nav class="top-bar" data-topbar>
 	  <ul class="title-area">
 	    <li class="name">
-	      <h1><a href="#">My Site</a></h1>
+	      <h1><a href="#">GalleryEighteen</a></h1>
 	    </li>
 	    <li class="toggle-topbar menu-icon"><a href="#">Menu</a></li>
 	  </ul>
@@ -12,16 +12,16 @@
 	    <ul class="right">
 	      <li class="active"><%= link_to 'Sign Out', destroy_user_session_path, method: 'delete' %></li>
 	      <li class="has-dropdown">
-	        <a href="#">Right Button with Dropdown</a>
+	        <a href="#">My Account</a>
 	        <ul class="dropdown">
-	          <li><a href="#">First link in dropdown</a></li>
+	          <li><a href="#">Profile</a></li>
 	        </ul>
 	      </li>
 	    </ul>
 
     	<!-- Left Nav Section -->
 	    <ul class="left">
-	      <li><%= link_to 'Categories', items_path %></li>
+	      <li><%= link_to 'Browse', items_path %></li>
 	    </ul>
 	  </section>
 	</nav>
