--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -10,13 +10,17 @@
 	  <section class="top-bar-section">
 	    <!-- Right Nav Section -->
 	    <ul class="right">
+	    <% if user_signed_in? %>
 	      <li class="active"><%= link_to 'Sign Out', destroy_user_session_path, method: 'delete' %></li>
 	      <li class="has-dropdown">
 	        <a href="#">My Account</a>
 	        <ul class="dropdown">
-	          <li><a href="#">Profile</a></li>
+	          <li><%= link_to 'Profile', user_path(current_user) %></li>
 	        </ul>
 	      </li>
+    	<% else %>
+    		<%= link_to "Sign up", new_registration_path(resource_name), :class => 'button [radius round]'%>
+    	<% end %>
 	    </ul>
 
     	<!-- Left Nav Section -->
@@ -26,7 +30,7 @@
 	  </section>
 	</nav>
 </div>
-<div class="contain-to-grid sticky">
+<!-- <div class="contain-to-grid sticky">
 		<ul class="breadcrumbs">
 		  <li><a href="#">Home</a></li>
 		  <li><a href="#">Features</a></li>
@@ -34,4 +38,4 @@
 		  <li<a href="#">Cloning</a></li>
 		</ul>
 	  </section>
-</div>
+</div> -->
