--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -12,7 +12,7 @@
  *= require foundation_and_overrides
 
  *= require_tree .
- *= require foundation
+ *= require foundation_and_overrides
  *= require 'masonry/basic'
  *= require 'masonry/centered'
  *= require 'masonry/fluid'
