--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,5 +16,6 @@
 	<%= render 'layouts/header' %>
     <%= yield %>
     <%= javascript_include_tag "application" %>
+  <%= render 'layouts/footer' %>
   </body>
 </html>
