add styling to forms and copied signing styles to signup page
credited DTS in footer

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,5 +1,6 @@
 <div class="footer">
 	GalleryEighteen is a production of Hourglass Design
 	<div class="links">
+		Thanks to the folks at <%= link_to 'Death to Stock', "http://deathtothestockphoto.com/" %> for beautiful backgrounds!
 	</div>
 </div>
