--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,5 +1,15 @@
-body {
-	overflow-x:hidden;
+@import "compass/css3";
+
+.right {
+	padding-right: 5px;
+}
+
+#signup {
+	background-color: transparentize(green, .1);
+
+	&:hover {
+		background-color: #008cba;
+	}
 }
 
 .wallpaper {
@@ -11,71 +21,25 @@ body {
 
 .container {
 	width: 90%;
-	max-width: 960px;
+	//max-width: 960px;
 	margin: 0 auto;
-}
-
-.form {
-	padding: 10px;
-	position: relative;
-	top: 50px;
-	width: 400px;
-	margin: 0 auto;
-	box-shadow: 0px 0px 4px black;
-	border-radius: 2px;
-	background: transparentize(white, .3);
-}
-
-.email, .password {
-	label {
-		position: absolute;
-		margin-left: 50px;
-		width: 80px;
-		text-align: right;
-	}
-}
-
-.login {
-	margin: 10px;
-	width: 200px;
-	margin-left: 150px;
-}
-
-.remember {
-	position: relative;
-	left: 200px;
-}
-
-.sign_in {
-		margin-left: 200px;
-		width: 100px;
-}
-
-.links {
-	position: absolute;
-	top: 80%;
-	font-size: 10pt;
-}
-
-i {
-	margin: 0 auto;
-	margin-top: 10px;
-	color: darkblue;
-	width: 100%;
-	font-size: 50pt;
-	text-align: center;
 }
 
 .footer {
-	position: absolute;
+	font-size: 8pt;
+	position: fixed;
 	top: 89vh;
+	margin: 0 auto;
 	width: 100%;
 	margin-top: 20px;
 	border-top: 2px solid transparentize(gray, .3);
 	padding: 5px;
-	padding-top: 10px;
 	background: transparentize(gray, .6);
 	height: 8vh;
 	font-size: 10pt;
 	text-align: center;
+}
+
+.links {
+	font-size: 10pt;
 }
