--- a/app/assets/stylesheets/items.css.scss
+++ b/app/assets/stylesheets/items.css.scss
@@ -5,7 +5,8 @@
 $item-width: 280px;
 
 .store-container {
-	width: 960px;
+	margin-top: 30px;
+	left: 50px
 }
 
 .item {
@@ -14,4 +15,12 @@ $item-width: 280px;
 	img {
 		max-height: 300px;
 	}
+}
+
+.side-nav {
+	position: fixed;
+	margin-top: 30px;
+	width: 70px;
+	box-shadow: 0 0 2px black;
+	padding: 5px;
 }
