--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,18 +1,25 @@
-<h2>Sign up</h2>
+<div class="wallpaper">
+<div class="container">
+	<div class="form">
+		<h2 align= "center">Create an Account</h2>
 
 <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
 
-  <div><%= f.label :email %><br />
+  <div class="email"><%= f.label :email %><br />
   <%= f.email_field :email, :autofocus => true %></div>
 
-  <div><%= f.label :password %><br />
+  <div class="password"><%= f.label :password %><br />
   <%= f.password_field :password %></div>
 
-  <div><%= f.label :password_confirmation %><br />
+  <div class="password"><%= f.label :password_confirmation %><br />
   <%= f.password_field :password_confirmation %></div>
 
-  <div><%= f.submit "Sign up" %></div>
+  <div class='login'><%= f.submit "Sign up", :class => 'tiny button' %></div>
 <% end %>
 
 <%= render "devise/shared/links" %>
+
+	</div>
+</div>
+</div>
