--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,5 +1,13 @@
+<ul class="side-nav">
+  <li><a href="#">Link 1</a></li>
+  <li><a href="#">Link 2</a></li>
+  <li><a href="#">Link 3</a></li>
+  <li><a href="#">Link 4</a></li>
+</ul>
+
 <div class = "container">
-  <h1>Listing items</h1>
+
+  <!-- <h1>Listing items</h1> -->
       <div id="masonry-container" class="store-container transitions-enabled infinite-scroll has-gutters">
         <% @items.each do |item| %>
           <div class="item box col">
@@ -13,4 +21,5 @@
         <% end %>
       </div>
   </div>
+
 <%= link_to 'New Item', new_item_path %>
