--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,1 +1,9 @@
-<%= @user.email %>
+<div class="container">
+	<div class="form">
+		<%= @user.email %>
+
+		<%= form_for @user do |f| %>
+		  <%= f.file_field :picture %>
+		<% end %>
+	</div>
+</div>
