add a welcome message, doesn't work yet

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -33,4 +33,13 @@
 
 	  </section>
 	</nav>
+
+	<!-- Welcome arrow and text... doesn't work yet -->
+	<!-- <div class="arrow" id="hello">
+		<%= image_tag('arrow.png') %>
+	</div>
+	<div class="welcome" id="hello">
+		First timer?  Click here to make an account!
+	</div> -->
+
 </div>
