--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,5 +1,20 @@
 @import "compass/css3";
 
+.welcome {
+	position: fixed;
+	right: 0;
+	width: 175px;
+	margin-top: 65px;
+	margin-right: 15px;
+	padding: 6px;
+	color: white;
+	background-color: transparentize(green, .5);
+	box-shadow: 0px 0px 4px black;
+	border-radius: 2px;
+	display: none;
+	
+}
+
 .right {
 	padding-right: 5px;
 }
@@ -21,7 +36,6 @@
 
 .container {
 	width: 90%;
-	//max-width: 960px;
 	margin: 0 auto;
 }
 
@@ -38,6 +52,15 @@
 	height: 8vh;
 	font-size: 10pt;
 	text-align: center;
+}
+
+.arrow {
+	display: none;
+	@include rotate(-20deg);
+	position: fixed;
+	width: 80px;
+	right: 70px;
+	top: 40px;
 }
 
 .links {
