--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -10,6 +10,12 @@
   <%= @item.details %>
 </p>
 
+
+<p>
+  <strong>Picture:</strong>
+  <%= @item.pic %>
+</p>
+
 <p>
   <strong>Price:</strong>
   <%= @item.price %>
