--- a/app/assets/stylesheets/items.css.scss
+++ b/app/assets/stylesheets/items.css.scss
@@ -12,8 +12,13 @@ $item-width: 280px;
 .item {
 	width: $item-width;
 	box-shadow: 0 0 2px 2px black;
+	padding: 0 !important;
+	
 	img {
 		max-height: 300px;
+		border-radius: 5px !important;
+
+		width: 100%;
 	}
 }
 
@@ -23,4 +28,18 @@ $item-width: 280px;
 	width: 70px;
 	box-shadow: 0 0 2px black;
 	padding: 5px;
+}
+
+.details {
+	display: none;
+	position: absolute;
+	bottom: 0px;
+	font-size: 14pt;
+	background: transparentize(black, .4);
+	width: 100%;
+	height: 25px;
+	padding: 5px;
+	overflow: hidden;
+	line-height: 14px;
+	color: lightgray;
 }
