--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -23,6 +23,10 @@
     <%= f.label :price %><br>
     <%= f.number_field :price %>
   </div>
+  <div class="field">
+    <%= f.label :pic %><br>
+    <%= f.text_area :pic %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
