--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,22 +1,20 @@
-<ul class="side-nav">
+<!-- <ul class="side-nav">
   <li><a href="#">Link 1</a></li>
   <li><a href="#">Link 2</a></li>
   <li><a href="#">Link 3</a></li>
   <li><a href="#">Link 4</a></li>
 </ul>
-
+ -->
 <div class = "container">
 
   <!-- <h1>Listing items</h1> -->
       <div id="masonry-container" class="store-container transitions-enabled infinite-scroll has-gutters">
         <% @items.each do |item| %>
-          <div class="item box col">
-            <%= image_tag "SimoneAnne-0023.jpg" %>
-            <%= item.title %>
-            <%= item.price %>
-            <%= link_to 'Show', item %>
-            <%= link_to 'Edit', edit_item_path(item) %>
-            <%= link_to 'Destroy', item, method: :delete, data: { confirm: 'Are you sure?' } %>
+          <div class="item box small-2 large-4 columns">
+            <%= image_tag(item.title) %>
+            <div class="details">
+              <%= link_to item.title, item %>
+            </div>
           </div>
         <% end %>
       </div>
