--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,3 +1,4 @@
+<% unless current_page? root_path %>
 <div class="fixed">
 	<nav class="top-bar" data-topbar>
 	  <ul class="title-area">
@@ -27,8 +28,8 @@
 	      </li>
 	 
 	    <% else %>
-	    	<%= link_to 'Sign Up', new_registration_path(resource_name), :class => 'button radius', :id => 'signup'%>
-		<% end %>
+	    	<%= link_to 'Sign Up', new_registration_path(resource_name), :class => 'button radius', :id => 'signup' %>
+			<% end %>
 		</ul>
 
 	  </section>
@@ -43,3 +44,4 @@
 	</div> -->
 
 </div>
+<% end %>
