fixed masonry on landing page

--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -48,7 +48,7 @@
 </div>
 <div class="bar4">
 	<h2 class="title">Popular Pieces</h3>
-	<div class="featured-art" id="masonry-container">
+	<div class="featured-art transitions-enabled infinite-scroll" id="masonry-container">
 		<div class="featured box">
 			<%= image_tag ('SimoneAnne-0023.jpg'), :id =>'first-pic'%>
 			<label class="featured-label" for="first-pic">Ocean View</label>
