--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -149,7 +149,7 @@ body {
 	@extend %bar;
 	position: relative;
 	height: 450px;
-	background: url("SimoneAnne-8351.jpg") no-repeat;
+	background: url("https://s3.amazonaws.com/GalleryEighteen/backgrounds/SimoneAnne-8351.jpg?AWSAccessKeyId=ASIAJ7IQYMNDJAJ3SMDA&Expires=1392405845&Signature=cyq7lmaf2anSWwNCSmGCFrPK0%2Bk%3D&x-amz-security-token=AQoDYXdzEGQakAIsYbqjHF4FlAWRfRP88IAC8vSwJpFKXOSSLj2XNJcTTG4cxngG8wipB8GWtKiqtPHxAYaV8hXYCnwvEcf7cNI8/pMk2o%2Bc805/d1wMri0YCSCUQew1npLkpuR6I9MZOVNI/m9b%2Bfm1KSkanxnZNsq2uJHN1rGxTPJ1L0E5PTP5qA1f7iA5XdMSuNu1EA3mbeCgCam/OrDPRSq3fokR/MVR0sb1bo1IM56Kw%2BW23OqLJiFuemt5%2BWfG%2BqKGmYeP98GsHyQvUvP3m40oblAAYF9NXNAUqecyz3jRbUYfvyMXvA0bNhtiIx/YG7UMIyhwFxwQW3ELJNqaBzvs8/MAM%2BPnrSrj9sgEC5jyIcq5z5Uy6CCC1PmXBQ%3D%3D") no-repeat;
 	background-size: cover;
 	background-position: 0;
 	font-family: 'Alegreya Sans', sans-serif;
@@ -191,7 +191,7 @@ body {
 .wallpaper {
 	position: relative;
 	height: 550px;
-	background: url("SimoneAnne-6292.jpg") no-repeat;
+	background: url("https://s3.amazonaws.com/GalleryEighteen/backgrounds/SimoneAnne-6292.jpg?AWSAccessKeyId=ASIAJ7IQYMNDJAJ3SMDA&Expires=1392405804&Signature=r3suyP66fvGufcOGl1vhQnDx6Rc%3D&x-amz-security-token=AQoDYXdzEGQakAIsYbqjHF4FlAWRfRP88IAC8vSwJpFKXOSSLj2XNJcTTG4cxngG8wipB8GWtKiqtPHxAYaV8hXYCnwvEcf7cNI8/pMk2o%2Bc805/d1wMri0YCSCUQew1npLkpuR6I9MZOVNI/m9b%2Bfm1KSkanxnZNsq2uJHN1rGxTPJ1L0E5PTP5qA1f7iA5XdMSuNu1EA3mbeCgCam/OrDPRSq3fokR/MVR0sb1bo1IM56Kw%2BW23OqLJiFuemt5%2BWfG%2BqKGmYeP98GsHyQvUvP3m40oblAAYF9NXNAUqecyz3jRbUYfvyMXvA0bNhtiIx/YG7UMIyhwFxwQW3ELJNqaBzvs8/MAM%2BPnrSrj9sgEC5jyIcq5z5Uy6CCC1PmXBQ%3D%3D") no-repeat;
 	background-size: cover;
 }
 
