profile pics to S3

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -123,23 +123,23 @@ body {
 }
 
 #first {
-	background: url('/assets/profile.jpg') no-repeat;
+	background: url('https://s3.amazonaws.com/GalleryEighteen/profile_pics/profile.jpg?AWSAccessKeyId=ASIAJ7IQYMNDJAJ3SMDA&Expires=1392406063&Signature=Y%2BUuTtWwWw3CY5H7JXfiSnXmSO0%3D&x-amz-security-token=AQoDYXdzEGQakAIsYbqjHF4FlAWRfRP88IAC8vSwJpFKXOSSLj2XNJcTTG4cxngG8wipB8GWtKiqtPHxAYaV8hXYCnwvEcf7cNI8/pMk2o%2Bc805/d1wMri0YCSCUQew1npLkpuR6I9MZOVNI/m9b%2Bfm1KSkanxnZNsq2uJHN1rGxTPJ1L0E5PTP5qA1f7iA5XdMSuNu1EA3mbeCgCam/OrDPRSq3fokR/MVR0sb1bo1IM56Kw%2BW23OqLJiFuemt5%2BWfG%2BqKGmYeP98GsHyQvUvP3m40oblAAYF9NXNAUqecyz3jRbUYfvyMXvA0bNhtiIx/YG7UMIyhwFxwQW3ELJNqaBzvs8/MAM%2BPnrSrj9sgEC5jyIcq5z5Uy6CCC1PmXBQ%3D%3D') no-repeat;
 	background-size: cover;
 }
 
 #second {
-	background: url('/assets/wood_josh.jpg') no-repeat;
+	background: url('https://s3.amazonaws.com/GalleryEighteen/profile_pics/wood_josh.jpg?AWSAccessKeyId=ASIAJ7IQYMNDJAJ3SMDA&Expires=1392406063&Signature=4DYEOCdcYNJDiNc7VT4Rj1QuDhM%3D&x-amz-security-token=AQoDYXdzEGQakAIsYbqjHF4FlAWRfRP88IAC8vSwJpFKXOSSLj2XNJcTTG4cxngG8wipB8GWtKiqtPHxAYaV8hXYCnwvEcf7cNI8/pMk2o%2Bc805/d1wMri0YCSCUQew1npLkpuR6I9MZOVNI/m9b%2Bfm1KSkanxnZNsq2uJHN1rGxTPJ1L0E5PTP5qA1f7iA5XdMSuNu1EA3mbeCgCam/OrDPRSq3fokR/MVR0sb1bo1IM56Kw%2BW23OqLJiFuemt5%2BWfG%2BqKGmYeP98GsHyQvUvP3m40oblAAYF9NXNAUqecyz3jRbUYfvyMXvA0bNhtiIx/YG7UMIyhwFxwQW3ELJNqaBzvs8/MAM%2BPnrSrj9sgEC5jyIcq5z5Uy6CCC1PmXBQ%3D%3D') no-repeat;
 	background-size: cover;
 }
 
 #third {
-	background: url('/assets/obama.jpg') no-repeat;
+	background: url('https://s3.amazonaws.com/GalleryEighteen/profile_pics/obama.jpg?AWSAccessKeyId=ASIAJ7IQYMNDJAJ3SMDA&Expires=1392406063&Signature=%2BAkVxCJgYz9TFLvaVN0CEPgONMs%3D&x-amz-security-token=AQoDYXdzEGQakAIsYbqjHF4FlAWRfRP88IAC8vSwJpFKXOSSLj2XNJcTTG4cxngG8wipB8GWtKiqtPHxAYaV8hXYCnwvEcf7cNI8/pMk2o%2Bc805/d1wMri0YCSCUQew1npLkpuR6I9MZOVNI/m9b%2Bfm1KSkanxnZNsq2uJHN1rGxTPJ1L0E5PTP5qA1f7iA5XdMSuNu1EA3mbeCgCam/OrDPRSq3fokR/MVR0sb1bo1IM56Kw%2BW23OqLJiFuemt5%2BWfG%2BqKGmYeP98GsHyQvUvP3m40oblAAYF9NXNAUqecyz3jRbUYfvyMXvA0bNhtiIx/YG7UMIyhwFxwQW3ELJNqaBzvs8/MAM%2BPnrSrj9sgEC5jyIcq5z5Uy6CCC1PmXBQ%3D%3D') no-repeat;
 	background-position: -75px 0;
 	background-size: cover;
 }
 
 #fourth {
-	background: url('/assets/van_gogh.jpg') no-repeat;
+	background: url('https://s3.amazonaws.com/GalleryEighteen/profile_pics/van_gogh.jpg?AWSAccessKeyId=ASIAJ7IQYMNDJAJ3SMDA&Expires=1392406063&Signature=vLGUl3aIvQIrP8H87ejnYFLq8lg%3D&x-amz-security-token=AQoDYXdzEGQakAIsYbqjHF4FlAWRfRP88IAC8vSwJpFKXOSSLj2XNJcTTG4cxngG8wipB8GWtKiqtPHxAYaV8hXYCnwvEcf7cNI8/pMk2o%2Bc805/d1wMri0YCSCUQew1npLkpuR6I9MZOVNI/m9b%2Bfm1KSkanxnZNsq2uJHN1rGxTPJ1L0E5PTP5qA1f7iA5XdMSuNu1EA3mbeCgCam/OrDPRSq3fokR/MVR0sb1bo1IM56Kw%2BW23OqLJiFuemt5%2BWfG%2BqKGmYeP98GsHyQvUvP3m40oblAAYF9NXNAUqecyz3jRbUYfvyMXvA0bNhtiIx/YG7UMIyhwFxwQW3ELJNqaBzvs8/MAM%2BPnrSrj9sgEC5jyIcq5z5Uy6CCC1PmXBQ%3D%3D') no-repeat;
 	background-size: cover;
 }
 
