serve images locally

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -123,23 +123,23 @@ body {
 }
 
 #first {
-	background: url('https://s3.amazonaws.com/GalleryEighteen/profile_pics/profile.jpg?AWSAccessKeyId=ASIAJ7IQYMNDJAJ3SMDA&Expires=1392409291&Signature=EhjSA9QDBzj9j8tVrQMLYduJ3AM%3D&x-amz-security-token=AQoDYXdzEGQakAIsYbqjHF4FlAWRfRP88IAC8vSwJpFKXOSSLj2XNJcTTG4cxngG8wipB8GWtKiqtPHxAYaV8hXYCnwvEcf7cNI8/pMk2o%2Bc805/d1wMri0YCSCUQew1npLkpuR6I9MZOVNI/m9b%2Bfm1KSkanxnZNsq2uJHN1rGxTPJ1L0E5PTP5qA1f7iA5XdMSuNu1EA3mbeCgCam/OrDPRSq3fokR/MVR0sb1bo1IM56Kw%2BW23OqLJiFuemt5%2BWfG%2BqKGmYeP98GsHyQvUvP3m40oblAAYF9NXNAUqecyz3jRbUYfvyMXvA0bNhtiIx/YG7UMIyhwFxwQW3ELJNqaBzvs8/MAM%2BPnrSrj9sgEC5jyIcq5z5Uy6CCC1PmXBQ%3D%3D') no-repeat;
+	background: url('https://s3.amazonaws.com/GalleryEighteen/profile_pics/profile.jpg') no-repeat;
 	background-size: cover;
 }
 
 #second {
-	background: url('https://s3.amazonaws.com/GalleryEighteen/profile_pics/obama.jpg?AWSAccessKeyId=ASIAJ7IQYMNDJAJ3SMDA&Expires=1392409291&Signature=pNHr%2BO3iqquknGszkZzW4oAX6Oo%3D&x-amz-security-token=AQoDYXdzEGQakAIsYbqjHF4FlAWRfRP88IAC8vSwJpFKXOSSLj2XNJcTTG4cxngG8wipB8GWtKiqtPHxAYaV8hXYCnwvEcf7cNI8/pMk2o%2Bc805/d1wMri0YCSCUQew1npLkpuR6I9MZOVNI/m9b%2Bfm1KSkanxnZNsq2uJHN1rGxTPJ1L0E5PTP5qA1f7iA5XdMSuNu1EA3mbeCgCam/OrDPRSq3fokR/MVR0sb1bo1IM56Kw%2BW23OqLJiFuemt5%2BWfG%2BqKGmYeP98GsHyQvUvP3m40oblAAYF9NXNAUqecyz3jRbUYfvyMXvA0bNhtiIx/YG7UMIyhwFxwQW3ELJNqaBzvs8/MAM%2BPnrSrj9sgEC5jyIcq5z5Uy6CCC1PmXBQ%3D%3D') no-repeat;
+	background: url('https://s3.amazonaws.com/GalleryEighteen/profile_pics/wood_josh.jpg') no-repeat;
 	background-size: cover;
 }
 
 #third {
-	background: url('https://s3.amazonaws.com/GalleryEighteen/profile_pics/obama.jpg?AWSAccessKeyId=ASIAJ7IQYMNDJAJ3SMDA&Expires=1392406063&Signature=%2BAkVxCJgYz9TFLvaVN0CEPgONMs%3D&x-amz-security-token=AQoDYXdzEGQakAIsYbqjHF4FlAWRfRP88IAC8vSwJpFKXOSSLj2XNJcTTG4cxngG8wipB8GWtKiqtPHxAYaV8hXYCnwvEcf7cNI8/pMk2o%2Bc805/d1wMri0YCSCUQew1npLkpuR6I9MZOVNI/m9b%2Bfm1KSkanxnZNsq2uJHN1rGxTPJ1L0E5PTP5qA1f7iA5XdMSuNu1EA3mbeCgCam/OrDPRSq3fokR/MVR0sb1bo1IM56Kw%2BW23OqLJiFuemt5%2BWfG%2BqKGmYeP98GsHyQvUvP3m40oblAAYF9NXNAUqecyz3jRbUYfvyMXvA0bNhtiIx/YG7UMIyhwFxwQW3ELJNqaBzvs8/MAM%2BPnrSrj9sgEC5jyIcq5z5Uy6CCC1PmXBQ%3D%3D') no-repeat;
+	background: url('https://s3.amazonaws.com/GalleryEighteen/profile_pics/obama.jpg') no-repeat;
 	background-position: -75px 0;
 	background-size: cover;
 }
 
 #fourth {
-	background: url('https://s3.amazonaws.com/GalleryEighteen/profile_pics/van_gogh.jpg?AWSAccessKeyId=ASIAJ7IQYMNDJAJ3SMDA&Expires=1392409291&Signature=%2BE3fgc2G%2BLY3RQP%2B19RdyTMJhrI%3D&x-amz-security-token=AQoDYXdzEGQakAIsYbqjHF4FlAWRfRP88IAC8vSwJpFKXOSSLj2XNJcTTG4cxngG8wipB8GWtKiqtPHxAYaV8hXYCnwvEcf7cNI8/pMk2o%2Bc805/d1wMri0YCSCUQew1npLkpuR6I9MZOVNI/m9b%2Bfm1KSkanxnZNsq2uJHN1rGxTPJ1L0E5PTP5qA1f7iA5XdMSuNu1EA3mbeCgCam/OrDPRSq3fokR/MVR0sb1bo1IM56Kw%2BW23OqLJiFuemt5%2BWfG%2BqKGmYeP98GsHyQvUvP3m40oblAAYF9NXNAUqecyz3jRbUYfvyMXvA0bNhtiIx/YG7UMIyhwFxwQW3ELJNqaBzvs8/MAM%2BPnrSrj9sgEC5jyIcq5z5Uy6CCC1PmXBQ%3D%3D') no-repeat;
+	background: url('https://s3.amazonaws.com/GalleryEighteen/profile_pics/van_gogh.jpg') no-repeat;
 	background-size: cover;
 }
 
@@ -149,7 +149,7 @@ body {
 	@extend %bar;
 	position: relative;
 	height: 450px;
-	background: url("https://s3.amazonaws.com/GalleryEighteen/backgrounds/SimoneAnne-8351.jpg?AWSAccessKeyId=ASIAJ7IQYMNDJAJ3SMDA&Expires=1392409130&Signature=a%2Bog8N%2BgAzEkxPZmk5FDLzixXpM%3D&x-amz-security-token=AQoDYXdzEGQakAIsYbqjHF4FlAWRfRP88IAC8vSwJpFKXOSSLj2XNJcTTG4cxngG8wipB8GWtKiqtPHxAYaV8hXYCnwvEcf7cNI8/pMk2o%2Bc805/d1wMri0YCSCUQew1npLkpuR6I9MZOVNI/m9b%2Bfm1KSkanxnZNsq2uJHN1rGxTPJ1L0E5PTP5qA1f7iA5XdMSuNu1EA3mbeCgCam/OrDPRSq3fokR/MVR0sb1bo1IM56Kw%2BW23OqLJiFuemt5%2BWfG%2BqKGmYeP98GsHyQvUvP3m40oblAAYF9NXNAUqecyz3jRbUYfvyMXvA0bNhtiIx/YG7UMIyhwFxwQW3ELJNqaBzvs8/MAM%2BPnrSrj9sgEC5jyIcq5z5Uy6CCC1PmXBQ%3D%3D") no-repeat;
+	background: url('https://s3.amazonaws.com/GalleryEighteen/backgrounds/obama.jpg') no-repeat;
 	background-size: cover;
 	background-position: 0;
 	font-family: 'Alegreya Sans', sans-serif;
@@ -191,7 +191,7 @@ body {
 .wallpaper {
 	position: relative;
 	height: 550px;
-	background: url("https://s3.amazonaws.com/GalleryEighteen/backgrounds/SimoneAnne-6292.jpg?AWSAccessKeyId=ASIAJ7IQYMNDJAJ3SMDA&Expires=1392409044&Signature=bOycOEscHVoXD2fvwJZN1Z%2BaGFA%3D&x-amz-security-token=AQoDYXdzEGQakAIsYbqjHF4FlAWRfRP88IAC8vSwJpFKXOSSLj2XNJcTTG4cxngG8wipB8GWtKiqtPHxAYaV8hXYCnwvEcf7cNI8/pMk2o%2Bc805/d1wMri0YCSCUQew1npLkpuR6I9MZOVNI/m9b%2Bfm1KSkanxnZNsq2uJHN1rGxTPJ1L0E5PTP5qA1f7iA5XdMSuNu1EA3mbeCgCam/OrDPRSq3fokR/MVR0sb1bo1IM56Kw%2BW23OqLJiFuemt5%2BWfG%2BqKGmYeP98GsHyQvUvP3m40oblAAYF9NXNAUqecyz3jRbUYfvyMXvA0bNhtiIx/YG7UMIyhwFxwQW3ELJNqaBzvs8/MAM%2BPnrSrj9sgEC5jyIcq5z5Uy6CCC1PmXBQ%3D%3D") no-repeat;
+	background: url('https://s3.amazonaws.com/GalleryEighteen/backgrounds/SimoneAnne-6292.jpg') no-repeat;
 	background-size: cover;
 }
 
