repathed images to local

--- a/app/assets/stylesheets/custom.css.scss.erb
+++ b/app/assets/stylesheets/custom.css.scss.erb
@@ -123,23 +123,23 @@ body {
 }
 
 #first {
-	background: url('/assets/profile.jpg') no-repeat;
+	background: url('https://s3.amazonaws.com/GalleryEighteen/profile_pics/profile.jpg') no-repeat;
 	background-size: cover;
 }
 
 #second {
-	background: url('/assets/wood_josh.jpg') no-repeat;
+	background: url('https://s3.amazonaws.com/GalleryEighteen/profile_pics/wood_josh.jpg') no-repeat;
 	background-size: cover;
 }
 
 #third {
-	background: url('/assets/obama.jpg') no-repeat;
+	background: url('https://s3.amazonaws.com/GalleryEighteen/profile_pics/obama.jpg') no-repeat;
 	background-position: -75px 0;
 	background-size: cover;
 }
 
 #fourth {
-	background: url('/assets/van_gogh.jpg') no-repeat;
+	background: url('https://s3.amazonaws.com/GalleryEighteen/profile_pics/van_gogh.jpg') no-repeat;
 	background-size: cover;
 }
 
@@ -149,7 +149,7 @@ body {
 	@extend %bar;
 	position: relative;
 	height: 450px;
-	background: url('/assets/SimoneAnne-8351.jpg') no-repeat;
+	background: url('https://s3.amazonaws.com/GalleryEighteen/backgrounds/obama.jpg') no-repeat;
 	background-size: cover;
 	background-position: 0;
 	font-family: 'Alegreya Sans', sans-serif;
@@ -191,7 +191,7 @@ body {
 .wallpaper {
 	position: relative;
 	height: 550px;
-	background: url('/assets/SimoneAnne-0023.jpg') no-repeat;
+	background: url('/assets/SimoneAnne-6292.jpg') no-repeat;
 	background-size: cover;
 }
 
@@ -245,7 +245,7 @@ body {
 	position: relative;
 	float: right;
 	top: 100px;
-	right: 5%;
+	right: 100px;
 	width: 450px;
 	
 	p {
