--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -50,8 +50,8 @@
 	<h2 class="title">Popular Pieces</h3>
 	<div class="featured-art transitions-enabled infinite-scroll" id="masonry-container">
 		<div class="featured box">
-			<%= image_tag ('SimoneAnne-0023.jpg'), :id =>'first-pic'%>
-			<label class="featured-label" for="first-pic">Ocean View</label>
+			<%= image_tag ('SimoneAnne-6292.jpg'), :id =>'first-pic'%>
+			<label class="featured-label" for="first-pic">Lilypads</label>
 		</div>
 		<div class="featured box">
 			<%= image_tag ('SimoneAnne-1862.jpg'), :id =>'second-pic' %>
