--- a/app/assets/stylesheets/items.css.scss
+++ b/app/assets/stylesheets/items.css.scss
@@ -12,20 +12,43 @@ $item-width: 220px;
 }
 
 .item {
-	width: $item-width;
-	box-shadow: 0 0 2px 2px black;
+	max-width: 24%;
+	min-width: 200px;
 	padding: 0 !important;
-	margin: 10px !important;
-	
-	img {
-		max-height: 300px;
-		border-radius: 5px !important;
+	box-shadow: 0 0 1px 1px;
+	font-family: 'Alegreya Sans', sans-serif;
+	font-weight: 300;
+	cursor: pointer;
 
-		width: 100%;
+	img {
+		border-radius: 5px !important;
 	}
 
-	.pricetag {
+	.art-label {
+		position: absolute;
+		opacity: .5;
+		bottom: 0px;
+		left: -1px;
+		background: black;
+		display: none;
+		padding: 4px;
+		width: 100.5%;
+		border-bottom-left-radius: 5px;
+		border-bottom-right-radius: 5px;
+		font-family: 'Alegreya Sans SC', sans-serif;
+		font-weight: 300;
+		font-size: 14pt;
+
+		a {
+			color: white;
+		}
+	}
+
+	.artist {
 		float: right;
+		font-size: 10pt;
+		max-width: 50%;
+		color: white;
 	}
 }
 
@@ -35,24 +58,6 @@ $item-width: 220px;
 	width: 70px;
 	box-shadow: 0 0 2px black;
 	padding: 5px;
-}
-
-.details {
-	display: none;
-	position: absolute;
-	bottom: 0px;
-	font-size: 14pt;
-	background: transparentize(black, .4);
-	width: 100%;
-	height: 25px;
-	padding: 5px;
-	overflow: hidden;
-	line-height: 14px;
-	
-	a {
-		color: white !important;
-		background: transparent;
-	}
 }
 
 
