--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -14,9 +14,9 @@
         <% @items.each do |item| %>
           <div class="item box small-2 large-4 columns">
             <%= image_tag item.pic %>
-            <div class="details">
+            <div class="art-label">
               <%= link_to item.title, item %>
-              <div class="pricetag">$<%= item.price %></div>
+              <div class="artist">by <%= item.artist %></div>
             </div>
           </div>
         <% end %>
