--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,7 +3,7 @@
 	<nav class="top-bar" data-topbar>
 	  <ul class="title-area">
 	    <li class="name">
-	      <h1><a href="#">GalleryEighteen</a></h1>
+	      <h1><a href="/">GalleryEighteen</a></h1>
 	    </li>
 	    <li class="toggle-topbar menu-icon"><a href="#">Menu</a></li>
 	  </ul>
@@ -18,14 +18,11 @@
 	    <!-- Right Nav Section -->
 	    <ul class="right">
 	    <% if user_signed_in? %>
-	      <li class="active"><%= link_to 'Sign Out', destroy_user_session_path, method: 'delete' %></li>
+	      <li><%= link_to 'Sign Out', destroy_user_session_path, method: 'delete' %></li>
 
-	      <li class="has-dropdown">
-	        <a href="#">My Account</a>
-	        <ul class="dropdown">
-	          <li><%= link_to 'Profile', user_path(current_user) %></li>
-	        </ul>
-	      </li>
+		<li><%= link_to 'My Cart', '#' %></li>
+
+	    <li><%= link_to 'My Account', user_path(current_user) %></li>
 	 
 	    <% else %>
 	    	<%= link_to 'Sign Up', new_registration_path(resource_name), :class => 'button radius', :id => 'signup' %>
