add color codes, BEFORE changing to non-BW color scheme

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -20,3 +20,9 @@
  *= require 'masonry/right-to-left'
  *= require 'masonry/transitions'
  */
+
+ $dkgray = #bbbbbb;
+ $ltgray = #d5d5d5;
+ $coreblue = #7da6c7;
+ $midblue = #5a8db6;
+ #dkblue = #457399;
