--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,4 @@
-<div class="wallpaper">
+<div class="wallpaper-login">
 <div class="container">
 	<div class="form">
 		<h2 align= "center">Create an Account</h2>
