--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,4 +1,4 @@
-<div class="footer">
+<div class="footer fixed">
 	GalleryEighteen is a production of Hourglass Design
 	<div class="links">
 		Thanks to the folks at <%= link_to 'Death to Stock', "http://deathtothestockphoto.com/" %> for beautiful backgrounds!
