--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,4 +1,4 @@
-<% unless current_page? root_path %>
+<% if user_signed_in? %>
 <div class="fixed">
 	<nav class="top-bar" data-topbar>
 	  <ul class="title-area">
