Some color changes, styled user page, added gravatar (default), styled item show page

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -21,8 +21,8 @@
  *= require 'masonry/transitions'
  */
 
- $dkgray = #bbbbbb;
- $ltgray = #d5d5d5;
- $coreblue = #7da6c7;
- $midblue = #5a8db6;
- #dkblue = #457399;
+ $dkgray: #bbbbbb;
+ $ltgray: #d5d5d5;
+ $coreblue: #7da6c7;
+ $midblue: #5a8db6;
+ $dkblue: #457399;
