--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,6 +1,15 @@
-<div class="footer fixed">
+<%- if user_signed_in? %>
+<div class="footer">
 	GalleryEighteen is a production of Hourglass Design
 	<div class="links">
 		Thanks to the folks at <%= link_to 'Death to Stock', "http://deathtothestockphoto.com/" %> for beautiful backgrounds!
 	</div>
-</div>
+
+	<%- else %>
+	<div class="clear-footer">
+	GalleryEighteen is a production of Hourglass Design
+	<div class="links">
+		Thanks to the folks at <%= link_to 'Death to Stock', "http://deathtothestockphoto.com/" %> for beautiful backgrounds!
+		</div>
+	</div>
+<% end -%>
