--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -6,7 +6,7 @@
 		  	<input class="email" id="email"></input>
 	  		<label for = "email">Email goes here!</label>
 		  	</div>
-		  	<%= button_to "Stay Up-To-Date", '#', :class => "email-list", :method => 'get' %>
+		  	<button class="email-list">Stay Up-To-Date</button>
 		  	<!--new_mailing_list_path should replace the above path-->
 		</div>
 	</div>
