--- a/app/assets/stylesheets/form.css.scss
+++ b/app/assets/stylesheets/form.css.scss
@@ -1,12 +1,19 @@
 @import url(http://fonts.googleapis.com/css?family=Over+the+Rainbow);
 
-$formcolor:transparentize(white, .3);
+$dkgray: #bbbbbb;
+$ltgray: #d5d5d5;
+$coreblue: #7da6c7;
+$midblue: #5a8db6;
+$dkblue: #457399;
+$formcolor:transparentize(white, .4);
 
 .form {
 	padding: 10px;
+	padding-top: 20px;
 	padding-right: 10px;
+	padding-bottom: 20px;
 	position: relative;
-	top: 50px;
+	top: 80px !important;
 	width: 350px;
 	margin: 0 auto;
 	box-shadow: 0px 0px 4px black;
@@ -17,21 +24,36 @@ $formcolor:transparentize(white, .3);
 	font-size: 12pt;
 	font-weight: 300;
 
+	.title {
+		position: static;
+	}
+
 	.forgot {
+		font-family: 'Over the Rainbow', cursive;
 		float: right;
+		font-size: 10pt;
+		margin-right: 35px;
 	}
 
 	.signup {
 		font-family: 'Over the Rainbow', cursive;
-		position: relative;
-		top: 10px;
-		cursor: pointer;
+		float: left;
+		font-size: 10pt;
+		margin-left: 35px;
+	}
+
+	.signin {
+		@extend .signup;
+		float: right !important;
+		margin-right: 30px;
+		margin-top: 9px;
+		margin-left: 0px;
 	}
 
 	a {
 		&:hover {
 			background-color: transparentize($formcolor, 1);
-			color: darkblue;
+			color: $dkblue;
 		}
 	}
 }
@@ -42,8 +64,9 @@ $formcolor:transparentize(white, .3);
 }
 
 .email-list {
-	@extend .signup;
+	font-family: 'Over the Rainbow', cursive;
 	transition: 200ms;
+	line-height: 12px;
 	display: block;
 	margin: 0 auto;
 	border: 1px solid gray;
