--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -1012,7 +1012,7 @@
 // $include-html-top-bar-classes: $include-html-classes;
 
 // Background color for the top bar
-$topbar-bg-color: white;
+$topbar-bg-color: transparentize(white, 1);
 $topbar-bg: $topbar-bg-color;
 
 // Height and margin
@@ -1024,7 +1024,7 @@ $topbar-bg: $topbar-bg-color;
 // $topbar-title-font-size: rem-calc(17);
 
 // Style the top bar dropdown elements
-$topbar-dropdown-bg: white;
+$topbar-dropdown-bg: transparentize(white, 1);
 $topbar-dropdown-link-color: #333;
 $topbar-dropdown-link-bg: #111;
 // $topbar-dropdown-link-weight: normal;
@@ -1035,11 +1035,11 @@ $topbar-dropdown-link-bg: #111;
 // Set the link colors and styles for top-level nav
 $topbar-link-color: #666;
 $topbar-link-color-hover: #000;
-$topbar-link-color-active: #666;
+$topbar-link-color-active: transparentize(white, 1);
 // $topbar-link-weight: normal;
 // $topbar-link-font-size: rem-calc(13);
 // $topbar-link-hover-lightness: -10%; // Darken by 10%
-$topbar-link-bg-hover: white  ;
+$topbar-link-bg-hover: transparentize(white, 1);
 // $topbar-link-bg-active: $primary-color;
 // $topbar-link-bg-active-hover: scale-color($primary-color, $lightness: -14%);
 // $topbar-link-font-family: $body-font-family;
