--- a/app/assets/stylesheets/items.css.scss
+++ b/app/assets/stylesheets/items.css.scss
@@ -2,7 +2,18 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+$dkgray: #bbbbbb;
+$ltgray: #d5d5d5;
+$coreblue: #7da6c7;
+$midblue: #5a8db6;
+$dkblue: #457399;
 $item-width: 220px;
+
+body {
+	background: $ltgray !important;
+	height: 100%;
+	min-height: 100vh;
+}
 
 .store-container {
 	position: relative;
@@ -15,7 +26,7 @@ $item-width: 220px;
 	max-width: 24%;
 	min-width: 200px;
 	padding: 0 !important;
-	box-shadow: 0 0 1px 1px;
+	box-shadow: 0 0 1px .5px;
 	font-family: 'Alegreya Sans', sans-serif;
 	font-weight: 300;
 	cursor: pointer;
@@ -62,8 +73,48 @@ $item-width: 220px;
 }
 
 
+.item-container {
+	padding-bottom: 5px;
+	position: relative;
+	top: 40px !important;
+	margin: 0 auto;
+	box-shadow: 0px 0px 2px black;
+	border-radius: 2px;
+	background: white;
+	font-family: 'Alegreya Sans SC', sans-serif;
+	line-height: 20px;
+	font-size: 12pt;
+	font-weight: 300;
+	max-width: 300px;
+}
 
+.display-pic {
+	img {
+	}
+}
 
+.show-title {
+	position: relative;
+	float: left;
+	padding: 2px;
+	font-size: 18pt;
+	top: -23px;
+	line-height: 19px;
+	width: 50%;
+	color: white;
+	margin-bottom: -18px;
+	background: transparentize(black, .5);
+}
+
+.show-price {
+	@extend .show-title;
+	float: right;
+	text-align: right;
+}
+
+.show-detail {
+	padding: 5px 8px 2px 8px;
+}
 
 
 
