--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -1,3 +1,44 @@
 // Place all the styles related to the Users controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+$dkgray: #bbbbbb;
+$ltgray: #d5d5d5;
+$coreblue: #7da6c7;
+$midblue: #5a8db6;
+$dkblue: #457399;
+
+.user-wallpaper {
+	@extend .wallpaper;
+	background: url('SimoneAnne-0023.jpg');
+	background-position: cover;
+	height: 93vh;
+}
+
+.gravatar {	
+	display: block;
+	position: relative;
+	margin: 0 auto;
+	margin-bottom: 15px;
+	
+	img {
+		border: 1px solid black;
+	}
+}
+
+.profile {
+	padding: 40px;
+	padding-top: 20px;
+	padding-right: 10px;
+	padding-bottom: 20px;
+	position: relative;
+	top: 80px !important;
+	width: 350px;
+	margin: 0 auto;
+	background: white;
+	border: 1px solid black;
+	font-family: 'Alegreya Sans SC', sans-serif;
+	line-height: 20px;
+	font-size: 12pt;
+	font-weight: 300;
+}
