--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,21 +1,21 @@
 <div class="wallpaper-login">
 <div class="container">
 	<div class="form">
-		<h2 align= "center">Create an Account</h2>
+		<div class="title">Create an Account</div>
 
 <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
 
-  <div class="email"><%= f.label :email %><br />
+  <div class="email"><%= f.label :email %>
   <%= f.email_field :email, :autofocus => true %></div>
 
-  <div class="password"><%= f.label :password %><br />
+  <div class="password"><%= f.label :password %>
   <%= f.password_field :password %></div>
 
-  <div class="password"><%= f.label :password_confirmation %><br />
+  <div class="password"><%= f.label :password_confirmation %>
   <%= f.password_field :password_confirmation %></div>
 
-  <div class='login'><%= f.submit "Sign up", :class => 'tiny button' %></div>
+  <div class='signup'><%= f.submit "Sign up", :class => 'tiny button' %></div>
 <% end %>
 
 <%= render "devise/shared/links" %>
